Fix overflow scrolls

--- a/assets/css/prism.DarkDev.css
+++ b/assets/css/prism.DarkDev.css
@@ -48,7 +48,7 @@ pre[class*="language-"] {
 	/*position: relative;*/
 	padding: 1em;
 	margin: .5em 0;
-	overflow: scroll;
+	overflow: auto;
 	box-shadow: 0 .5em .5em -.5em  black inset;
 }
 
